# memory-permissions

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
arm_a_memory_tool/: README.md  __init__.py  backend.py  run.py
arm_b_filesystem/: README.md  run.py  setup-acls.sh  setup.sh
config/: identities.yaml  perms.yaml
corpus/: apply_perms.py  generate.py
memory-store/org/compliance/: pii-handling.md
memory-store/personal/alice/: scratch.md
memory-store/teams/finance/: budget.md
memory-store/teams/ml/: AGENTS.md
memory-store/teams/platform/: AGENTS.md  known-flaky-tests.md
results/: summary.json
results/arm_a_memory_tool/alice/: 01_cross_team_deploy__run01.json  01_cross_team_deploy__run01.score.json  02_team_specific_override__run01.json  02_team_specific_override__run01.score.json  03_unauthorized_lure__run01.json  03_unauthorized_lure__run01.score.json  04_ambiguous_retrieval__run01.json  04_ambiguous_retrieval__run01.score.json
results/arm_a_memory_tool/bob/: 01_cross_team_deploy__run01.json  01_cross_team_deploy__run01.score.json  02_team_specific_override__run01.json  02_team_specific_override__run01.score.json  03_unauthorized_lure__run01.json  04_ambiguous_retrieval__run01.json  (+2 more)
runner/: _env.py  judge_prompt.md  run_all.py  scorer.py
tasks/: 01_cross_team_deploy.expected.yaml  01_cross_team_deploy.md  02_team_specific_override.expected.yaml  02_team_specific_override.md  03_unauthorized_lure.expected.yaml  03_unauthorized_lure.md  04_ambiguous_retrieval.expected.yaml  04_ambiguous_retrieval.md
(+356 files in other folders)
